--- a/.github/workflows/pest.yml
+++ b/.github/workflows/pest.yml
@@ -71,8 +71,26 @@ jobs:
           ./maho index:reindex:all
           ./maho cache:flush
 
+      - name: Verify Maho initialization
+        run: |
+          php -r "
+            require 'vendor/autoload.php';
+            Mage::setRoot(getcwd());
+            try {
+              Mage::app();
+              echo 'Maho initialized successfully!' . PHP_EOL;
+              echo 'Store: ' . Mage::app()->getStore()->getName() . PHP_EOL;
+            } catch (Exception \$e) {
+              echo 'ERROR: ' . \$e->getMessage() . PHP_EOL;
+              exit(1);
+            }
+          "
+
+      - name: List available tests
+        run: ./vendor/bin/pest --list-tests | head -20
+
       - name: Run Pest Tests
-        run: ./vendor/bin/pest
+        run: ./vendor/bin/pest --display-errors --display-warnings
 
   pest-pgsql:
     name: Test Suite (PostgreSQL)
@@ -138,5 +156,23 @@ jobs:
           ./maho index:reindex:all
           ./maho cache:flush
 
+      - name: Verify Maho initialization
+        run: |
+          php -r "
+            require 'vendor/autoload.php';
+            Mage::setRoot(getcwd());
+            try {
+              Mage::app();
+              echo 'Maho initialized successfully!' . PHP_EOL;
+              echo 'Store: ' . Mage::app()->getStore()->getName() . PHP_EOL;
+            } catch (Exception \$e) {
+              echo 'ERROR: ' . \$e->getMessage() . PHP_EOL;
+              exit(1);
+            }
+          "
+
+      - name: List available tests
+        run: ./vendor/bin/pest --list-tests | head -20
+
       - name: Run Pest Tests
-        run: ./vendor/bin/pest
+        run: ./vendor/bin/pest --display-errors --display-warnings
