Add SQLite to Pest test workflow

--- a/.github/workflows/pest.yml
+++ b/.github/workflows/pest.yml
@@ -140,3 +140,56 @@ jobs:
 
       - name: Run Pest Tests
         run: ./vendor/bin/pest --display-errors --display-warnings
+
+  pest-sqlite:
+    name: Test Suite (SQLite)
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Setup PHP
+        uses: shivammathur/setup-php@v2
+        with:
+          php-version: 8.3
+          extensions: pdo_sqlite
+
+      - name: Checkout code
+        uses: actions/checkout@v6
+
+      - name: Get composer cache directory
+        id: composer-cache
+        run: echo "dir=$(composer config cache-files-dir)" >> $GITHUB_OUTPUT
+
+      - name: Cache dependencies
+        uses: actions/cache@v5
+        with:
+          path: ${{ steps.composer-cache.outputs.dir }}
+          key: ${{ runner.os }}-composer-${{ hashFiles('**/composer.lock') }}
+          restore-keys: ${{ runner.os }}-composer-
+
+      - name: Install dependencies
+        run: composer install --prefer-dist --no-progress --ignore-platform-req=ext-*
+
+      - name: Install Maho
+        run: |
+          ./maho install \
+            --license_agreement_accepted yes \
+            --locale en_US \
+            --timezone Europe/London \
+            --default_currency USD \
+            --db_name maho.sqlite \
+            --db_engine sqlite \
+            --url http://maho.test/ \
+            --secure_base_url http://maho.test/ \
+            --use_secure 0 \
+            --use_secure_admin 0 \
+            --admin_lastname admin \
+            --admin_firstname admin \
+            --admin_email admin@admin.com \
+            --admin_username admin \
+            --admin_password asdasdasd123123123 \
+            --sample_data 1
+          ./maho index:reindex:all
+          ./maho cache:flush
+
+      - name: Run Pest Tests
+        run: ./vendor/bin/pest --display-errors --display-warnings
