Consolidate database config: replace model/type/pdoType with single engine value
Replace redundant database connection config values with a single `engine` value:
- Before: model (mysql), type (pdo_mysql), pdoType (unused)
- After: engine (mysql) - type is derived internally as pdo_{engine}

Changes:
- Update local.xml.template to use single <engine> element
- Add _getConnectionType() to Resource.php with backward compatibility
- Add _getConnectionEngine() to Setup.php with backward compatibility
- Remove dead pdoType code from installer classes
- Add strong typing to installer DB classes

Backward compatibility maintained: existing installations using model/type
will continue to work as the code checks for engine first, then falls back
to legacy config values.

Fixes #432

--- a/app/etc/local.xml.template
+++ b/app/etc/local.xml.template
@@ -29,9 +29,7 @@
                     <password>{{db_pass}}</password>
                     <dbname>{{db_name}}</dbname>
                     <initStatements>{{db_init_statemants}}</initStatements>
-                    <model>{{db_engine}}</model>
-                    <type>{{db_type}}</type>
-                    <pdoType>{{db_pdo_type}}</pdoType>
+                    <engine>{{db_engine}}</engine>
                     <active>1</active>
                 </connection>
             </default_setup>
