--- a/composer.json
+++ b/composer.json
@@ -61,7 +61,8 @@
         "symfony/polyfill-php84": "^1.31",
         "symfony/polyfill-php85": "^1.32",
         "symfony/validator": "^7.4",
-        "symfony/var-dumper": "^7.4"
+        "symfony/var-dumper": "^7.4",
+        "picqer/php-barcode-generator": "^3.0"
     },
     "replace": {
         "magento-hackathon/magento-composer-installer": "^99.99",
