--- a/.phpstan.dist.neon
+++ b/.phpstan.dist.neon
@@ -3,8 +3,14 @@ includes:
     - vendor/mahocommerce/maho-phpstan-plugin/extension.neon
     - vendor/phpstan/phpstan/conf/bleedingEdge.neon
     - vendor/phpstan/phpstan-deprecation-rules/rules.neon
+    - vendor/phpstan/phpstan-strict-rules/rules.neon
 
 parameters:
+    strictRules:
+        allRules: false
+        matchingInheritedMethodNames: true
+        disallowedBacktick: true
+
     level: 6
     tmpDir: .phpstan.cache
     reportUnmatchedIgnoredErrors: true
@@ -12,6 +18,13 @@ parameters:
     checkInternalClassCaseSensitivity: true
     checkMissingOverrideMethodAttribute: true
     treatPhpDocTypesAsCertain: false
+
+    # Disable strict-rules parameters that aren't controlled by allRules
+    reportMaybesInMethodSignatures: false
+    reportStaticMethodSignatures: false
+    reportMaybesInPropertyPhpDocTypes: false
+    reportWrongPhpDocTypeInVarTag: false
+    checkStrictPrintfPlaceholderTypes: false
 
     fileExtensions:
         - php
