--- a/composer.json
+++ b/composer.json
@@ -84,7 +84,8 @@
         "phpstan/phpstan-deprecation-rules": "^2.0",
         "rector/rector": "^2",
         "pestphp/pest": "^4",
-        "psy/psysh": "^0.12.10"
+        "psy/psysh": "^0.12.10",
+        "phpstan/phpstan-strict-rules": "^2.0"
     },
     "suggest": {
         "ext-pdo_pgsql": "Required for PostgreSQL database support",
