--- a/composer.json
+++ b/composer.json
@@ -82,6 +82,7 @@
         "mahocommerce/maho-phpstan-plugin": "^4.1",
         "phpstan/phpstan": "^2.0",
         "phpstan/phpstan-deprecation-rules": "^2.0",
+        "phpstan/phpstan-strict-rules": "^2.0",
         "rector/rector": "^2",
         "pestphp/pest": "^4",
         "psy/psysh": "^0.12.10"
