Added PHPStan `reportMaybesInPropertyPhpDocTypes` setting
This enables stricter PHPDoc type checking for properties, ensuring that:
- Property PHPDoc types in child classes match parent class types
- Property types don't include impossible type combinations

Fixed all related PHPStan errors by:
- Adding proper PHPDoc types to parent abstract class properties
- Removing redundant child property declarations that inherit from parents
- Adding inline @var annotations where narrower types are needed
- Fixing SimpleXML element type declarations in Maho\Simplexml\Config

--- a/.phpstan.dist.neon
+++ b/.phpstan.dist.neon
@@ -18,11 +18,10 @@ parameters:
     checkInternalClassCaseSensitivity: true
     checkMissingOverrideMethodAttribute: true
     treatPhpDocTypesAsCertain: false
+    reportMaybesInPropertyPhpDocTypes: true
 
     # Disable strict-rules parameters that aren't controlled by allRules
     reportMaybesInMethodSignatures: false
-    reportMaybesInPropertyPhpDocTypes: false
-
     fileExtensions:
         - php
         - phtml
